--- a/ifood_dev_week.ipynb
+++ b/ifood_dev_week.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Dia 1: Conheça o Google Colab e o Projeto Desta Dev Week\n",
+        "## Dia 1: [Conheça o Google Colab e o Projeto Desta Dev Week](https://www.youtube.com/live/59XwC5e8U1k?feature=share)\n",
         "\n",
         "Vamos mergulhar no Google Colab, aprendendo como ele pode ser usado para automatizar tarefas cotidianas, principalmente através da manipulação de planilhas. Além disso, você aprenderá na prática o conceito do Net Promoter Score (NPS), uma métrica fundamental para entender a satisfação do cliente."
       ],
@@ -49,13 +49,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Este código baixa um arquivo CSV de feedbacks do Google Drive e carrega os dados em um DataFrame pandas.\n",
+        "\n",
+        "O arquivo é identificado por um ID único ('file_id'), que é extraído da URL do arquivo no Google Drive.\n",
+        "A URL do arquivo no Google Drive tem o seguinte formato:\n",
+        "https://drive.google.com/file/d/FILE_ID/view?usp=sharing\n",
+        "\"\"\"\n",
+        "\n",
+        "# TODO: Baixar o arquivo CSV do Google Drive e carregar seus dados em um DataFrame pandas."
+      ],
+      "metadata": {
+        "id": "NbC1PgziTHai"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "pQo2iXQLPjnR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4764eafc-a34a-47f4-dded-48aeaad8866e"
+        "outputId": "a55c4c06-d301-4cee-8d2a-52bd75a97cbe"
       },
       "outputs": [
         {
@@ -67,17 +86,22 @@
         }
       ],
       "source": [
-        "# TODO: Implementar a lógica de NPS em comandos simples e sequenciais.\n",
-        "#       Código Versão 1 (Paradigma Imperativo).\n",
+        "\"\"\"\n",
+        "Versão 1: Paradigma Imperativo.\n",
+        "\n",
+        "Este script lê um arquivo CSV contendo feedback de usuários, no qual cada feedback tem uma nota associada.\n",
+        "O NPS é calculado como a diferença entre o percentual de promotores (nota >= 9) e detratores (nota <= 6), multiplicada por 100.\n",
+        "A implementação é realizada de uma maneira imperativa, onde os comandos são executados sequencialmente.\n",
+        "\"\"\"\n",
         "\n",
         "import pandas as pd\n",
         "\n",
         "dados = pd.read_csv('/content/feedbacks.csv', delimiter=';')\n",
         "\n",
+        "notas = dados['nota']\n",
+        "\n",
         "detratores = 0\n",
         "promotores = 0\n",
-        "\n",
-        "notas = dados['nota']\n",
         "\n",
         "for nota in notas:\n",
         "  if nota >= 9:\n",
@@ -92,8 +116,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: Evoluir a implementação para separar melhor as responsabilidades.\n",
-        "#       Código Versão 2 (Paradigma Funcional).\n",
+        "\"\"\"\n",
+        "Versão 2: Paradigma Funcional.\n",
+        "\n",
+        "Este script segue uma abordagem funcional para calcular o NPS a partir de feedback de usuários.\n",
+        "A função \"calcular_nps\" é definida para encapsular a lógica do cálculo do NPS.\n",
+        "Esta versão apresenta uma separação de responsabilidades mais clara do que a versão imperativa.\n",
+        "\"\"\"\n",
         "\n",
         "import pandas as pd\n",
         "\n",
@@ -121,7 +150,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f14a242b-3582-4575-a912-ef8a0beb1b2a"
+        "outputId": "d273c2e5-c09d-4063-9843-225252d7bc7d"
       },
       "execution_count": null,
       "outputs": [
@@ -137,8 +166,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: Abstrair o problema com classes, transformando os dados em objetos de negócico.\n",
-        "#       Código Versão 3 (Paradigma Orientado a Objetos).\n",
+        "\"\"\"\n",
+        "Versão 3: Paradigma Orientado a Objetos (POO).\n",
+        "\n",
+        "Este script adota uma abordagem Orientada a Objetos (OO) para calcular o NPS a partir de feedback de usuários.\n",
+        "Duas classes são definidas, onde:\n",
+        "- Feedback representa um único feedback de usuário;\n",
+        "- AnalisadorFeedback é usado para calcular o NPS a partir de uma lista de Feedbacks.\n",
+        "A POO fornece uma abstração mais clara dos dados e comportamentos envolvidos no cálculo do NPS.\n",
+        "Desta forma, nossa solução estará preparada para as evoluções do nosso projeto.\n",
+        "\"\"\"\n",
         "\n",
         "import pandas as pd\n",
         "\n",
@@ -171,7 +208,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "971d76a4-82dc-452f-a82a-b4309abfb8c4"
+        "outputId": "0fd1139e-7e1f-4f69-c0f2-077a3e02d3c5"
       },
       "execution_count": null,
       "outputs": [
